// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellAmountSelector should render children 1`] = `
<SelectAmount
  max={Infinity}
  min={0}
  onChange={[Function]}
  style={
    [
      {
        "flexShrink": 1,
        "height": "100%",
      },
      undefined,
    ]
  }
  value={0}
>
  <PeachText>
    I'm a child
  </PeachText>
</SelectAmount>
`;

exports[`SellAmountSelector should render correctly 1`] = `
<SelectAmount
  max={Infinity}
  min={0}
  onChange={[Function]}
  style={
    [
      {
        "flexShrink": 1,
        "height": "100%",
      },
      undefined,
    ]
  }
  value={0}
/>
`;
